--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,11 @@
       "src": "/(.*)",
       "dest": "api/index.py"
     }
+  ],
+  "crons": [
+    {
+      "path": "/api/agents/consume",
+      "schedule": "*/5 * * * *"
+    }
   ]
 }
